--- a/WebStyle/style.css
+++ b/WebStyle/style.css
@@ -86,6 +86,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center; /* Centering the content */
+  z-index: 1;
 }
 
 .landing-page::before {
@@ -97,4 +98,78 @@ header {
   height: 100vh; 
   background-image: url("./images/bg-pat.png");
   background-size: cover;
+  opacity: .4;
+  z-index: -1;
   }
+
+.content{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+}
+
+.content-details{
+  max-width: 80%;
+}
+
+.title{
+  font-size: 6rem;
+  color: white;
+  margin-bottom: 1rem;
+}
+
+.description{
+  color: #929fc5;
+  margin-bottom: 2.5rem;
+}
+
+.search{
+  margin-bottom: 2.5rem;
+}
+
+.search input{
+  border: none;
+  border-radius: 5rem;
+  padding: 2rem;
+  outline: none;
+}
+
+.search-bar{
+  width: calc(100% - .5rem);
+}
+
+.search-btn {
+  width: 10rem;
+  background-image: linear-gradient(to right, #ff83d5, #ffccb0);
+  color: white;
+  cursor: pointer;
+  margin-left: -10rem;
+}
+
+.search-btn:hover{
+  background-image: linear-gradient(to left, #ff83d5, #ffccb0);
+}
+
+.sm-list{
+  display: flex;
+}
+
+.sm-link{
+  color: #929fc5;
+  width: 3rem;
+  height: 3rem;
+  border: 1px solid #929fc5;
+  border-radius: 50%;
+  display: flex;
+  margin-right: 2.5rem;
+}
+
+.sm-link i{
+  margin: auto;
+}
+
+.sm-link:hover{
+  background-image: linear-gradient(to right, #a971ff, #00f0ff);
+  color: white;
+}
+  
