--- a/WebStyle/style.css
+++ b/WebStyle/style.css
@@ -248,3 +248,60 @@ header {
     filter: hue-rotate(360deg);
   }
 }
+
+/*Media queries*/
+@media screen and (max-width: 768px){
+  .nav{
+    align-items: center;
+  }
+
+  .content{
+    grid-template-columns: 1fr;
+  }
+
+  .content-details{
+    order: 1;
+    max-width: 100%;
+  }
+
+  .title{
+    font-size: 3.5rem;
+  }
+  .description{
+    font-size: 1.4rem;
+  }
+  
+  .image-group{
+    margin-top: 10rem;
+  }
+
+  .blob-large{
+    width: 70%;
+  }
+
+  .blob-bean{
+    width: 30%;
+    top: -1rem;
+    left: 5rem;
+  }
+
+  .blob-1{
+    display: none;
+  }
+
+  .blob-2{
+    left: 30rem;
+    bottom: -1rem;
+    top: revert;
+    width: 25%;
+  }
+
+  .blob-3{
+   right: 3rem;
+   bottom: -25rem;
+  }
+
+  .blob-4{
+    display: none;
+  }
+}
